--- a/package.json
+++ b/package.json
@@ -5,31 +5,31 @@
     "main": "index.js",
     "author": "Sven Helmberger",
     "license": "Apache-2.0",
-    "devDependencies": {
-        "babel-core": "^6.23.1",
-        "babel-loader": "^6.4.0",
-        "babel-plugin-espower": "^2.3.2",
-        "babel-plugin-transform-class-properties": "^6.23.0",
-        "babel-preset-es2015": "^6.22.0",
-        "babel-preset-react": "^6.23.0",
-        "babel-register": "^6.23.0",
-        "clone": "^2.1.0",
-        "mocha": "^3.2.0",
-        "power-assert": "^1.4.2",
-        "webpack": "^2.2.1"
-    },
     "scripts": {
         "build": "NODE_ENV=production webpack -p",
         "watch": "webpack -d -w",
         "test": "mocha --compilers js:babel-register -R spec test/**"
     },
+    "devDependencies": {
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-plugin-espower": "^2.3.2",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "babel-register": "^6.26.0",
+        "clone": "^2.1.1",
+        "mocha": "^3.5.3",
+        "power-assert": "^1.4.4",
+        "webpack": "^3.6.0"
+    },
     "dependencies": {
         "object-assign": "^4.1.1",
-        "react": "^15.4.2",
-        "react-dom": "^15.4.2",
-        "react-redux": "^5.0.3",
-        "redux": "^3.6.0",
-        "redux-logger": "^2.8.2",
+        "react": "^16.0.0-rc.3",
+        "react-dom": "^16.0.0-rc.3",
+        "react-redux": "^5.0.6",
+        "redux": "^3.7.2",
+        "redux-logger": "^3.0.6",
         "redux-thunk": "^2.2.0"
     }
 }
